# game_maths

./: CMakeLists.txt  README.md
include/: Vector2.hpp
srcs/: matrix3.cpp  transform.cpp  vector2.cpp  vector3.cpp
srcs/tests/: tests.cpp
